deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: userapi
        image: 339712760713.dkr.ecr.us-west-2.amazonaws.com/userapi:1c4ebe265932c4ce900a158760eeb97836831afd
        imagePullPolicy: Always
        ports:
          - containerPort: 5000


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders
  labels:
    app: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
 name: users
spec:
 selector:
   app: users
 ports:
 - name: http
   port: 80
   targetPort: 5000
 type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
 name: orders
spec:
 selector:
   app: orders
 ports:
 - name: http
   port: 80
 type: LoadBalancer

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: webapp
spec:
 rules:
 - host: empire.com
   http:
     paths:
     - path: /users
       pathType: Prefix
       backend:
         service:
           name: users
           port:
             name: http
     - path: /orders
       pathType: Prefix
       backend:
         service:
           name: orders
           port:
             name: http
